<resources>
    <string name="app_name">Yaver</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="not_yet_registered_sign_up">Not yet registered? Sign Up</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="already_an_user_login">Already an user? Login</string>
    <string name="write_here">Write here</string>
    <string name="welcome">Welcome to Yaver!\nAsk anything</string>
</resources>